--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
-
+.container {
+    width: 1170;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin: auto;
+}
 /* start landing box */
 .settings-box {
     position: fixed;
@@ -172,3 +177,40 @@ body {
 }
 
 /* end landing page */
+
+
+/* start about-us */
+.about-us {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+}
+.about-us .info-box {
+    flex: 1;
+    padding: 30px;
+}
+.about-us .info-box h2 {
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--main--color);
+    margin: 0 0 20px;
+    
+}
+.about-us .info-box p {
+    line-height: 2;
+    color: #767676;
+    margin : 0;
+}
+.about-us .image-box {
+    flex: 1;
+    text-align: center;
+}
+.about-us .image-box img{
+    width: 250px;
+    background-color: var(--main--color);
+    opacity: .6;
+    border-radius: 50%;
+    box-shadow: 20px 15px 55px 20px var(--main--color);
+
+}
+/* end about-us */
