--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
     min-height: 100vh;
     transition: .5s;
     box-shadow: 1px -10px 1px 2px var(--main--color);
-    opacity: .5;
+    opacity: .7;
     border-right: 1px solid var(--main--color);
 }
 .settings-box.open {left: 0;}
@@ -214,3 +214,48 @@ body {
 
 }
 /* end about-us */
+
+
+/* start skills */
+.skills {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #eee;
+}
+.skills h2 {
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--main--color);
+    margin: 0 0 50px;
+    text-align: center;
+}
+.skills .skill-box {
+    background-color: #fff;
+    display: flex;
+    padding: 15px;
+    margin-bottom: 15px;
+}
+.skills .skill-box .skill-name {
+    font-weight: bold;
+    width: 100px;
+    text-align: center;
+    line-height: 30px;
+}
+.skills .skill-box .skill-progress {
+    height: 30px;
+    width: 100%;
+    background: #f6f6f6;
+    border-radius: 6px;
+    position: relative;
+}
+.skills .skill-box .skill-progress span {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background-color: var(--main--color);
+}
+
+
+/* end skills */
