--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@
 }
 body {
     font-family: 'Open Sans', sans-serif;
+    height:2000px;
 }
 .container {
     width: 1170;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 75px;
+    padding-right: 75px;
     margin: auto;
 }
 /* start landing box */
@@ -253,11 +254,10 @@ body {
     position: absolute;
     left: 0;
     top: 0;
-    width: 50%;
+    width: 0;
     height: 100%;
     background-color: var(--main--color);
-    transition: all .5s ease-in-out;
-    
+    transition: all .5s;
 }
 
 
